# cloud-computing-project

./: .gitignore  README.md
flask_mysql/: README.md  app.py  pyproject.toml  requirements.txt
flask_mysql/templates/: edit_menu_item.html  index.html
iris_model/: README.md  app.py  requirements.txt
iris_model/model/: iris_model.sav
iris_model/templates/: index.html
model_ai/: app.py  requirements.txt
model_ai/templates/: index.html
model_ai/train_model/: LicensePlateRecognition.ipynb  Ultralytics with Python.ipynb
nodejs_mysql/: .env.example  Dockerfile  README.md  docker-compose.yaml  index.js  package-lock.json  package.json
nodejs_mysql/frontend/: index.html  script.js
php_mysql/: Dockerfile  docker-compose.yaml
php_mysql/html/: contact.php  create_menu.php  db.php  delete_menu.php  index.php  menu.php  update_menu.php
wordpress/: README.md
